# multinull-jsd

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  core.py  example_advanced.ipynb  example_initial.ipynb  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cdf_backends/: __init__.py  base.py  mc_multinomial.py  mc_normal.py
docs/: api.rst  conf.py  index.rst  usage.rst
experiments/: README.md  __init__.py  alternatives.py  core.py  experiment_analysis.ipynb  experiment_core.ipynb  io_utils.py  metrics.py  registry.py  scenarios.py  settings.py  utils.py
experiments/baselines/: exact_multinom_r.py  kernel_mmd.py  multiple_testing.py  power_divergence.py
jsd_test/null_structures/: indexed_hypotheses.py  null_hypothesis.py
multinull_jsd/: __init__.py  _validators.py  core.py  types.py
multinull_jsd/cdf_backends/: __init__.py  base.py  exact.py  mc_multinomial.py  mc_normal.py
multinull_jsd/null_structures/: __init__.py  indexed_hypotheses.py  null_hypothesis.py
null_structures/: indexed_hypotheses.py  null_hypothesis.py
tests/: __init__.py  conftest.py  test_core_multinull_jsd_test.py  test_types_protocols.py
tests/backends/: _contract.py  test_cdf_backend_helpers.py  test_exact_backend.py  test_mc_multinomial_backend.py  test_mc_normal_backend.py
tests/null_structures/: test_indexed_hypotheses.py  test_null_hypothesis.py
tests/validators/: test_validate_arrays.py  test_validate_histograms.py  test_validate_indices.py  test_validate_probabilities.py  test_validate_scalar.py
